# simx

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: agent-api.md  api-stability.md  compatibility.md  hid-contract.md  lease-contract.md  lease-lifecycle.md  private-apis.md  production-acceptance.md  release.md  streaming-current-baseline.md  streaming-next-steps.md  streaming-video-technical-solution.md
native/include/: CoreSimulator.h  SimulatorKit.h
native/src/: simx_bridge.m
scripts/: benchmark-h264-viewer.js  install.sh  production-acceptance.sh  verify-viewer-swipe.js
src/: cli.rs  control.rs  lib.rs  main.rs  pool.rs  preview.rs  simctl.rs  stream.rs  update.rs
tests/: pool.rs  real_pool.rs
viewer/: index.html
