[package]
name = "simx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
fs2 = "0.4"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "simx"
path = "src/lib.rs"

[[bin]]
name = "simx"
path = "src/main.rs"
